[package]
name = "rstar-benches"
version = "0.1.1"
authors = ["Stefan Altmayer <stoeoef@gmail.com>", "The Georust Developers <mods@georust.org>"]

[dev-dependencies]
rand = "0.7"
rand_hc = "0.2"
criterion = { version = "0.3.4", features = ["html_reports"] }
rstar = { path = "../rstar" }

[[bench]]
name = "benchmarks"
harness = false
