[package]
name = "rstar-benches"
version = "0.1.1"
authors = ["Stefan Altmayer <stoeoef@gmail.com>", "The Georust Developers <mods@georust.org>"]

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
geo = "0.28.0"
geo-types = { version = "0.7.9", features = ["use-rstar_0_12"] }
rand = "0.8"
rand_hc = "0.3"
rstar = { path = "../rstar" }

[[bench]]
name = "benchmarks"
harness = false
