[package]
name = "rstar-benches"
edition = "2015"
version = "0.1.1"
authors = ["Stefan Altmayer <stoeoef@gmail.com>", "The Georust Developers <mods@georust.org>"]

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
rand = "0.8"
rand_hc = "0.3"
rstar = { path = "../rstar" }

[[bench]]
name = "benchmarks"
harness = false
