[package]
name = "rstar-demo"
version = "0.1.0"
authors = ["Stefan Altmayer <stoeoef@gmail.com>"]
edition = "2018"
rust-version = "1.63"

[dependencies]
rand = "0.7"
# using a slightly older version of kiss3d/nalgebra 
# Since these version require the new feature resolver and min-const-generics only
# available in rust-1.51 See: https://github.com/dimforge/nalgebra/issues/875
# kiss3d = "0.31"
# nalgebra = "0.26"
kiss3d = "0.34"
nalgebra = "0.34"

rstar = { path="../rstar" }
