[package]
name = "rstar"
version = "0.12.2"
authors = ["Stefan Altmayer <stoeoef@gmail.com>", "The Georust Developers <mods@georust.org>"]
description = "An R*-tree spatial index"
documentation = "https://docs.rs/rstar/"
repository = "https://github.com/georust/rstar"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
rust-version = "1.63"
keywords = ["rtree", "r-tree", "spatial", "spatial-index", "nearest-neighbor"]
categories = ["data-structures", "algorithms", "science::geo"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
heapless = "0.8.0"
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
serde = { version = "1.0.219", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }
smallvec = "1.15.0"
mint = { version = "0.5.9", optional = true }

[features]
default = []
debug = []

[dev-dependencies]
rand = "0.9.1"
rand_hc = "0.4.0"
approx = "0.5.1"
serde_json = "1.0.140"
nalgebra = { version = "0.33.2", features = ["mint"] }
