[package]
name = "rstar"
version = "0.13.0"
authors = ["Stefan Altmayer <stoeoef@gmail.com>", "The Georust Developers <mods@georust.org>"]
description = "An R*-tree spatial index"
documentation = "https://docs.rs/rstar/"
repository = "https://github.com/georust/rstar"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.85"
keywords = ["rtree", "r-tree", "spatial", "spatial-index", "nearest-neighbor"]
categories = ["data-structures", "algorithms", "science::geo"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
heapless = { version = "0.8", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
smallvec = "1.6"
mint = { version = "0.5.9", optional = true }

[features]
default = []
debug = []

[dev-dependencies]
rand = "0.10"
rand_hc = "0.5"
approx = "0.5"
serde_json = "1.0"
nalgebra = { version = "0.34", features = ["mint"] }
